Thu Sep 15 11:39:18 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/dialog.rb: If a dialog does not show up yet, 
	  TkDialogObj#name raises an exception. [ruby-talk:156109]

Thu Sep 15 01:39:19 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/tuplespace.rb (Rinda::TemplateEntry::initialize): pull
	  up method. Tabs converted to spaces.

Thu Sep 15 00:18:24 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/telnet.rb (Net::Telnet::waitfor): replace sysread with
	  readpartial.  [ruby-talk:127641]

Wed Sep 14 22:40:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (ruby_glob): glob function not using ruby exception system.

Wed Sep 14 01:26:03 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/net/https.rb: backported from trunk, rev 1.3.
	  [ruby-dev:25673] (again), [ruby-dev:26617] (again),
	  [ruby-dev:27062]

	* ext/openssl/lib/net/https.rb: removed.

	* ext/openssl/lib/net/protocols.rb: removed.

	* lib/net/http.rb: #use_ssl?, #use_ssl are moved from net/https.

Tue Sep 13 22:09:40 2005  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/logger.rb (Logger): added formatter accessor to logger for
	  dictating the way in which the logger should format the messages it
	  displays.  Thanks to Nicholas Seckar (cf. [ruby-talk:153391]) and
	  Daniel Berger.

	* lib/logger.rb (Logger): added VERSION constant.

	* lib/logger.rb: removed document for LogDevice. It is an
	  implementation detail and is not a public interface.

	* test/logger/test_logger.rb: added tests.

Tue Sep 13 21:47:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (BEGIN_CALLARGS): pop halfly pushed status.
	  fixed: [ruby-dev:26881]

Tue Sep 13 16:26:45 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: backported from trunk, rev 1.128.
	  [ruby-dev:25673] [ruby-dev:26617]

	* lib/net/protocol.rb: backported from trunk, rev 1.78.

	* lib/net/protocol.rb: new method #old_open to support net/smtp
	  and net/pop.
